--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is a static template with no bundling",
   "main": "index.html",
   "scripts": {
-    "sketch": "myProgram",
+    "sketch": "ifpointnot",
     "start": "serve",
     "build": "echo This is a static template, there is no bundler or bundling involved!"
   },
